Complete carousel functionality with slideshow

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <img src="./image5.jpg" alt="image5">
     </div>
     <nav class="nav">
-      
+      <i class="fa-solid fa-circle"></i>
+      <i class="fa-solid fa-circle"></i>
+      <i class="fa-solid fa-circle"></i>
+      <i class="fa-solid fa-circle"></i>
+      <i class="fa-solid fa-circle"></i>
     </nav>
   </div>
   <i class="arrow fa-solid fa-caret-right"></i>
